experimenting with java 17