@@ -12,8 +12,12 @@ java {
     toolchain {
         // since auto detection is disabled only the env var JDK8FX is picked up as java toolchain (see gradle.properties)
         // it seems not possible to query for toolchains with included JavaFX...
-        languageVersion = JavaLanguageVersion.of(8)
+        languageVersion = JavaLanguageVersion.of(17)
     }
+}
+
+compileJava {
+    options.compilerArgs << '--add-exports' << 'javafx.graphics/com.sun.glass.ui=ALL-UNNAMED'
 }
 
 configurations {
